# sglduck

./: .gitignore  LICENSE  MANIFEST.in  README.md  makefile  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: gallery.md  get-started.md  index.md  reference.md
src/_sgl/: aes.c  aes.h  array.h  case.c  case.h  cgs.h  cgs_free.c  cgs_free.h  cgs_order.c  cgs_order.h  cta.c  cta.h  direction.h  flex_overrides.h  geom.c  geom.h  keyword.c  keyword.h  panic.cpp  panic.h  parser.tab.c  parser.tab.h  parser.y  qual.c  qual.h  scale.c  scale.h  scanner.c  scanner.l  sgl_error.cpp  sgl_error.h  sgl_to_cgs.h  sgl_to_pgs.cpp  sgl_win_compat.h  title.c  title.h
src/pysgl/: __init__.py  errors.py  match_col_casing.py  perform_as_for_layer.py  perform_cts_for_layer.py  pgs.py  result_dfs.py  types.py  utils.py
src/pysgl/cta/: __init__.py  avg.py  base.py  bin.py  bin_utils.py  count.py  identity.py  utils.py
src/pysgl/geom/: __init__.py  bar.py  base.py  box.py  line.py  point.py
src/pysgl/scale/: __init__.py  base.py  linear.py  ln.py  log.py  utils.py
src/pysgl/validate/: valid_collections.py  valid_column_refs.py  valid_ctas.py  valid_layering.py  valid_titles.py  validate_semantics.py
src/sglduck/: __init__.py  cast_columns.py  constants.py  db_get_plot.py  errors.py  lets_plot_direction.py  match_col_casing.py  perform_as_for_layer.py  perform_ctas.py  perform_cts_for_layer.py  pgs.py  result_dfs.py  rgs_to_lets_plot.py  sgl_plot.py  titles.py  types.py  utils.py
src/sglduck/cta/: avg.py  base.py  bin.py  count.py  identity.py
src/sglduck/data/: __init__.py  cars.csv  trees.csv
src/sglduck/geom/: __init__.py  bar.py  base.py  box.py  line.py  point.py  utils.py
src/sglduck/scale/: __init__.py  base.py  linear.py  ln.py  log.py  utils.py
src/sglduck/validate/: __init__.py  valid_aesthetics.py  valid_column_classes.py  valid_column_refs.py  valid_ctas.py  valid_facet.py  valid_groupings.py  valid_layering.py  valid_qualifier.py  valid_scales.py  validate_semantics.py
src/test/: test_aes.c  test_cgs_order.c  test_keyword.c  test_qual.c  test_scale.c  test_sgl_to_cgs.c
tests/: conftest.py  test_bridge.py  test_result_dfs.py  test_sgl_cta.py  test_sgl_cta_avg.py  test_sgl_cta_bin.py  test_sgl_cta_count.py  test_sgl_cta_identity.py  test_sgl_geom.py  test_sgl_geom_bar.py  test_sgl_geom_box.py  test_sgl_geom_line.py  test_sgl_geom_point.py  test_sgl_scale.py  test_sgl_scale_linear.py  test_sgl_scale_ln.py  test_sgl_scale_log.py  test_utils.py  test_valid_aesthetics.py  test_valid_collections.py  test_valid_facet.py  test_valid_layering.py  test_valid_scales.py  test_valid_titles.py  test_validate_semantics.py
tests/_sgl/: stubs.c  test_aes.c  test_case.c  test_cta.c  test_geom.c  test_keyword.c  test_scale.c  test_sgl_to_cgs.c  test_title.c
tests/pysgl/: test_cast_columns.py  test_match_col_casing.py  test_perform_as_for_layer.py  test_perform_ctas.py  test_perform_cts_for_layer.py  test_pgs.py  test_result_dfs.py  test_types.py
tests/pysgl/cta/: test_avg.py  test_base.py  test_bin.py  test_bin_utils.py  test_count.py  test_identity.py
tests/pysgl/geom/: test_base.py  test_box.py
tests/pysgl/scale/: test_ln.py  test_log.py
tests/pysgl/validate/: test_valid_column_classes.py  test_valid_column_refs.py  test_valid_ctas.py  test_valid_groupings.py  test_valid_qualifier.py
tests/sglduck/: test_cast_columns.py  test_data.py  test_db_get_plot.py  test_lets_plot_direction.py  test_match_col_casing.py  test_perform_as_for_layer.py  test_perform_ctas.py  test_perform_cts_for_layer.py  test_pgs.py  test_result_dfs.py  test_rgs_to_lets_plot.py  test_sgl_plot.py  test_titles.py  test_types.py  test_utils.py
tests/sglduck/cta/: test_avg.py  test_base.py  test_bin.py  test_bin_utils.py  test_count.py  test_identity.py
tests/sglduck/geom/: test_bar.py  test_base.py  test_box.py  test_line.py  test_point.py
tests/sglduck/scale/: test_base.py  test_linear.py  test_ln.py  test_log.py  test_utils.py
tests/sglduck/validate/: test_valid_aesthetics.py  test_valid_collections.py  test_valid_column_classes.py  test_valid_column_refs.py  test_valid_ctas.py  test_valid_facet.py  test_valid_groupings.py  test_valid_layering.py  test_valid_qualifier.py  test_valid_scales.py  test_valid_titles.py  test_validate_semantics.py
