[build-system]
requires = ["setuptools>=61", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "sglduck"
version = "0.1.0"
description = "Generate plots from a DuckDB connection and a SGL statement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jon Chapman", email = "jochapjo@icloud.com" }]
keywords = ["sgl", "graphics", "visualization", "sql", "duckdb", "lets-plot", "grammar of graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "lets-plot",
    "duckdb",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/sgl-projects/sglduck"
Source = "https://github.com/sgl-projects/sglduck"
Paper = "https://arxiv.org/abs/2505.14690"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sglduck*"]
