[build-system]
requires = ["setuptools>=61", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "sglduck"
version = "0.1.0"
description = "Generate plots from a DuckDB connection and a SGL statement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jon Chapman", email = "jochapjo@icloud.com" }]
keywords = ["sgl", "graphics", "visualization", "sql", "duckdb", "lets-plot", "grammar of graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "lets-plot",
    "duckdb",
    "polars",
    "pyarrow",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff==0.15.20"]

[project.urls]
Homepage = "https://github.com/sgl-projects/sglduck"
Source = "https://github.com/sgl-projects/sglduck"
Paper = "https://arxiv.org/abs/2505.14690"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "snapshot: lets-plot SVG snapshot regression tests (rendering, may be platform-sensitive)",
]

[tool.cibuildwheel]
# Build standard CPython 3.10-3.13 wheels; skip musllinux (Alpine) and 32-bit.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *_i686 *-win32"
# Smoke-test each wheel: load the compiled parser and parse a statement.
test-command = "python -c \"from sglduck.pgs import sgl_to_pgs; assert sgl_to_pgs('visualize a as x from t using points')['layers']\""

[tool.cibuildwheel.macos]
# Build both Apple-silicon and Intel wheels (the non-native one isn't tested).
archs = ["arm64", "x86_64"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C4", "B"]
# B905: not enforcing zip(..., strict=...) — adding it across the existing call
# sites would change runtime behavior (raise on length mismatch).
ignore = ["B905"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sglduck*"]

[tool.setuptools.package-data]
"sglduck.data" = ["*.csv"]
